# Octo

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Package.resolved  Package.swift  README.md  build-utils.rb  build.rb  test-report.rb
.github/workflows/: test.yml
Docs/Developping/: Plugins.md  README.md
Examples/cJSON/: README.md  octo.toml
ExpressionInterpreter/: .gitignore
ExpressionInterpreter/src/: lib.rs  lib.udl
OctoPlugins/: Package.resolved  Package.swift  README.md
SharedLibraries/: Package.resolved  Package.swift  README.md  build.rb
SharedLibraries/OctoConfigKeys/: Package.swift
SharedLibraries/OctoGenerateShared/: Package.swift
SharedLibraries/OctoIO/: Package.swift
SharedLibraries/OctoIntermediate/: Package.swift
SharedLibraries/OctoMemory/: Package.swift
SharedLibraries/OctoParseTypes/: Package.swift
Sources/Brooklyn/: Brooklyn.swift  CProgram+ruby.swift  CProgram.swift  CType.swift  CompilerInfo.swift  ConversonOptions.swift  UnexposedAttribute.swift  log.swift  visit.swift
Sources/Clang/: CXCallingConv.swift  CXCursor.swift  CXDiagnostic.swift  CXDiagnosticSeverity.swift  CXFile.swift  CXIndex.swift  CXKind.swift  CXSourceLocation.swift  CXString.swift  CXTranslationUnit.swift  CXType.swift  clang.swift
Sources/ExpressionInterpreter/: Cargo.toml
Sources/ExpressionInterpreter/src/: lib.rs
Sources/Octo/: Into.swift  Language.swift  Octo.swift  StringBuilder.swift  URL+extension.swift  log.swift
Sources/OctoCLI/: Attribute.swift  ErrorFormatting.swift  ExpressionInterpreter+CustomStringConvertible.swift  Octo.swift  (+18 more)
(+175 files in other folders)
